--- a/EasyMemo/Base.lproj/Main.storyboard
+++ b/EasyMemo/Base.lproj/Main.storyboard
@@ -166,6 +166,12 @@
                                             <segue destination="6oT-fp-iaX" kind="presentation" id="Yz8-c8-izv"/>
                                         </connections>
                                     </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="YUx-ix-Z8g"/>
+                                    <barButtonItem systemItem="action" id="2jj-XV-Aqe">
+                                        <connections>
+                                            <action selector="share:" destination="ls9-CG-aBS" id="pga-MX-Yjd"/>
+                                        </connections>
+                                    </barButtonItem>
                                 </items>
                             </toolbar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="TLU-Gt-dCi">
